--- a/RightWindow/platformio.ini
+++ b/RightWindow/platformio.ini
@@ -12,7 +12,9 @@
 platform = atmelavr
 board = ATmega328P
 board_build.f_cpu = 16000000L
+build_flags=-Wl,-u,vfprintf -lprintf_flt -l
 framework = arduino
 upload_protocol = usbasp
 upload_flags =
-        -v
+	     -b 10
+             -v
